--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Kuro Bot</title>
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="icon" type="image/x-icon" href="assets/media/Kuro_bot.ico">
+  <link rel="manifest" href="manifest.json">
 </head>
 <body>
   <header class="header">
